# threadman

./: LICENSE  README.md  main.py  pyproject.toml
.github/workflows/: create_artifacts_and_publish.yaml  pytest.yaml
tests/: test_threadman.py
threadman/: __init__.py  main.py
